[package]
name = "registry-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.9.1"
log = "0.4.17"
oci-spec = "0.5.8"
serde = { version = "1.0.147", features = ["derive"] }
